--- a/Instructor page/instructor.html
+++ b/Instructor page/instructor.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Skilly | Instructors</title>
+    <link rel="shortcut icon" href="../skilly-logo.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/dd40dccb92.js" crossorigin="anonymous"></script>
@@ -430,13 +431,13 @@
         <div class="swiper-slide card">
             <div class="card-content">
                 <div class="imge">
-                    <img src="instructors/i ali dina.jpg" alt="" width="100%">
+                    <img src="instructors/robert.jpg" alt="" width="100%">
                 </div>
                 <div class="name-profession">
-                    <span class="name">Imran Ali Dina</span>
-                    <span class="profession">Graphic Designer</span>
+                    <span class="name">Robert J. Shriller</span>
+                    <span class="profession">YeleCourses</span>
                 </div>
-                <a class="btnpic"href="https://www.youtube.com/c/GFXMentor">
+                <a class="btnpic"href="https://www.youtube.com/user/YaleCourses/videos">
                         Check Out
                   </a>
                   <div class="icons">
@@ -447,6 +448,47 @@
             </div>
 
         </div>
+        <div class="swiper-slide card">
+            <div class="card-content">
+                <div class="imge">
+                    <img src="instructors/msb.jpg" alt="" width="100%">
+                </div>
+                <div class="name-profession">
+                    <span class="name">Mustafa Safdar Baig</span>
+                    <span class="profession">Mustafa Safdar Baig</span>
+                </div>
+                <a class="btnpic"href="https://www.youtube.com/c/MustafaSafdarBaig">
+                        Check Out
+                  </a>
+                  <div class="icons">
+                      <img src="insta.png" alt="" width="100%">
+                      <img src="facebook.png" alt="" width="100%">
+                      <img src="g5.png" alt="" width="100%">
+                  </div>
+            </div>
+
+        </div>
+        <div class="swiper-slide card">
+            <div class="card-content">
+                <div class="imge">
+                    <img src="instructors/sheraz.webp" alt="" width="100%">
+                </div>
+                <div class="name-profession">
+                    <span class="name">Sheraz Pervaiz</span>
+                    <span class="profession">Digiskills</span>
+                </div>
+                <a class="btnpic"href="https://www.youtube.com/channel/UCaXPq5o8lEcE_7jqgY5A9oQ">
+                        Check Out
+                  </a>
+                  <div class="icons">
+                      <img src="insta.png" alt="" width="100%">
+                      <img src="facebook.png" alt="" width="100%">
+                      <img src="g5.png" alt="" width="100%">
+                  </div>
+            </div>
+
+        </div>
+
     </div>
     <div class="swiper-button-next"></div>
     <div class="swiper-button-prev"></div>
@@ -463,13 +505,73 @@
         <div class="swiper-slide card">
             <div class="card-content">
                 <div class="imge">
-                    <img src="instructors/i ali dina.jpg" alt="" width="100%">
+                    <img src="instructors/jose.jpg" alt="" width="100%">
                 </div>
                 <div class="name-profession">
-                    <span class="name">Imran Ali Dina</span>
-                    <span class="profession">Graphic Designer</span>
+                    <span class="name">Jose Zuniga</span>
+                    <span class="profession">Teaching Men's Fashion</span>
                 </div>
-                <a class="btnpic"href="https://www.youtube.com/c/GFXMentor">
+                <a class="btnpic"href="https://www.youtube.com/c/Teachingmensfashion">
+                        Check Out
+                  </a>
+                  <div class="icons">
+                      <img src="insta.png" alt="" width="100%">
+                      <img src="facebook.png" alt="" width="100%">
+                      <img src="g5.png" alt="" width="100%">
+                  </div>
+            </div>
+
+        </div>
+        <div class="swiper-slide card">
+            <div class="card-content">
+                <div class="imge">
+                    <img src="instructors/ranverr.jpg" alt="" width="100%">
+                </div>
+                <div class="name-profession">
+                    <span class="name">Ranveer Allahbadia</span>
+                    <span class="profession">Beer Biceps</span>
+                </div>
+                <a class="btnpic"href="https://www.youtube.com/c/BeerBicepsOfficial">
+                        Check Out
+                  </a>
+                  <div class="icons">
+                      <img src="insta.png" alt="" width="100%">
+                      <img src="facebook.png" alt="" width="100%">
+                      <img src="g5.png" alt="" width="100%">
+                  </div>
+            </div>
+
+        </div>
+        <div class="swiper-slide card">
+            <div class="card-content">
+                <div class="imge">
+                    <img src="instructors/zeeshan.jpg" alt="" width="100%">
+                </div>
+                <div class="name-profession">
+                    <span class="name">Zeeshan Sheikh</span>
+                    <span class="profession">Seeken</span>
+                </div>
+                <a class="btnpic"href="https://www.youtube.com/c/SeeKen">
+                        Check Out
+                  </a>
+                  <div class="icons">
+                      <img src="insta.png" alt="" width="100%">
+                      <img src="facebook.png" alt="" width="100%">
+                      <img src="g5.png" alt="" width="100%">
+                  </div>
+            </div>
+
+        </div>
+        <div class="swiper-slide card">
+            <div class="card-content">
+                <div class="imge">
+                    <img src="instructors/javed.jpg" alt="" width="100%">
+                </div>
+                <div class="name-profession">
+                    <span class="name">Dr. Javed Iqbal</span>
+                    <span class="profession">Prof. Dr. Javed Iqbal</span>
+                </div>
+                <a class="btnpic"href="https://www.youtube.com/user/surgeonjaved1">
                         Check Out
                   </a>
                   <div class="icons">
@@ -500,7 +602,7 @@
                 </div>
                 <div class="name-profession">
                     <span class="name">Imran Ali Dina</span>
-                    <span class="profession">Graphic Designer</span>
+                    <span class="profession">Gfx Mentor</span>
                 </div>
                 <a class="btnpic"href="https://www.youtube.com/c/GFXMentor">
                         Check Out
@@ -512,7 +614,6 @@
                   </div>
             </div>
             </div>
-
         <div class="swiper-slide card">
             <div class="card-content">
                 <div class="imge">
@@ -523,6 +624,25 @@
                     <span class="profession">Bol Chaal</span>
                 </div>
                 <a class="btnpic"href="https://www.youtube.com/c/BolChaal">
+                        Check Out
+                  </a>
+                  <div class="icons">
+                      <img src="insta.png" alt="" width="100%">
+                      <img src="facebook.png" alt="" width="100%">
+                      <img src="g5.png" alt="" width="100%">
+                  </div>
+            </div>
+        </div>
+        <div class="swiper-slide card">
+            <div class="card-content">
+                <div class="imge">
+                    <img src="instructors/aman malik.jpg" alt="" width="100%">
+                </div>
+                <div class="name-profession">
+                    <span class="name">Aman Malik</span>
+                    <span class="profession">Aman Guides</span>
+                </div>
+                <a class="btnpic"href="https://www.youtube.com/c/AmanGuides">
                         Check Out
                   </a>
                   <div class="icons">
@@ -548,13 +668,33 @@
         <div class="swiper-slide card">
             <div class="card-content">
                 <div class="imge">
-                    <img src="instructors/i ali dina.jpg" alt="" width="100%">
+                    <img src="instructors/mubashir siddiqui.png" alt="" width="100%">
                 </div>
                 <div class="name-profession">
-                    <span class="name">Imran Ali Dina</span>
-                    <span class="profession">Graphic Designer</span>
+                    <span class="name">Mubashir Siddiqui</span>
+                    <span class="profession">Village food Secrets</span>
                 </div>
-                <a class="btnpic"href="https://www.youtube.com/c/GFXMentor">
+                <a class="btnpic"href="https://www.youtube.com/c/VillageFoodSecrets">
+                        Check Out
+                  </a>
+                  <div class="icons">
+                      <img src="insta.png" alt="" width="100%">
+                      <img src="facebook.png" alt="" width="100%">
+                      <img src="g5.png" alt="" width="100%">
+                  </div>
+            </div>
+
+        </div>
+        <div class="swiper-slide card">
+            <div class="card-content">
+                <div class="imge">
+                    <img src="instructors/cake.jpg" alt="" width="100%">
+                </div>
+                <div class="name-profession">
+                    <span class="name">Mr. Cakes</span>
+                    <span class="profession">Mr. Cakes</span>
+                </div>
+                <a class="btnpic"href="https://www.youtube.com/c/MrCakesOfficial">
                         Check Out
                   </a>
                   <div class="icons">
@@ -739,8 +879,6 @@
         </div>
     </div>
 </div>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
 <script>
     $('.navbar-toggler').click(function(){
