--- a/Category page/category.html
+++ b/Category page/category.html
@@ -10,12 +10,12 @@
     <script src="https://kit.fontawesome.com/dd40dccb92.js" crossorigin="anonymous"></script>
     <script src="../jquery.js"></script>
     <link rel="stylesheet" href="category.css">
+    <link rel="shortcut icon" href="../skilly-logo.png" type="image/x-icon">
     <link rel="stylesheet" href="media scr.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
-
 </head>
 <body>
     <div class="navbar navbar-expand-md header">
@@ -213,8 +213,6 @@
         </div>
     </div>
 </div>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
 <script>
     $('.navbar-toggler').click(function(){
