--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 <link rel="stylesheet" href="home page/style.css">
+<link rel="shortcut icon" href="skilly-logo.png" type="image/x-icon">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <script src="https://kit.fontawesome.com/dd40dccb92.js" crossorigin="anonymous"></script>
 <script src="jquery.js"></script>
 <link rel="stylesheet" href="home page/mediascreens.css">
-
 </head>
 <body>
 
@@ -58,7 +58,7 @@
                 Educators on Youtube and to earn a great Job with new skilset
             </p>
             <div class="btn-cover">
-                <a href="get started page/getstarted.html" class="btn1">
+                <a href="get started page/Get Started.html" class="btn1">
                     <span class="btn-text">Get Started</span></a>
                 <a href="About us/aboutus.html" class="btn2">Learn More</a>
             </div>
@@ -89,8 +89,11 @@
         </div>
     </div>
     <div data-aos="fade-left" class="img1">
+
         <div class="img">
+            <a href="login signup page/login.html">
             <img src="home page/1x/design.png" alt="" width="100%">
+        </a>
           </div>
       
           <div class="img">
@@ -415,7 +418,6 @@ productContainers.forEach((item, i) => {
     })
 });
 </script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
     AOS.init({
