2nd last update

--- a/assignment submission page/Assignment Submission.html
+++ b/assignment submission page/Assignment Submission.html
@@ -139,7 +139,7 @@ filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#FB8B24", en
         <div data-aos="zoom-in" class="logo float-end">
             <img src="small-logo.png" alt="" width="100%">
         </div class="form-control">
-        <form data-aos="zoom-in " action="jawad">
+        <form data-aos="zoom-in " action="../index.html">
             <input type="text" placeholder="Your Name" class="form-control my-2" aria-describedby="basic-addon1">
             <input type="text" placeholder="Your Student ID" class="form-control my-2" aria-describedby="basic-addon1">
             <input class="py-4 button" type="file" id="myfile" name="myfile"> <br>
