--- a/course description page/cd.html
+++ b/course description page/cd.html
@@ -56,7 +56,7 @@
         </div>
         <div class="btns" data-aos="zoom-in-up">
             <button type="button" class="btn btn-outline-danger m-3"><a href="../assignment submission page/Assignment Submission.html">Submit Assignment</a></button>
-            <button type="button" class="btn btn-outline-danger m-3"><a href="../rate course page/">Rate This Course</a></button>
+            <button type="button" class="btn btn-outline-danger m-3"><a href="../rate course page/rate.html">Rate This Course</a></button>
         </div>
     </div>
 </div>
@@ -64,6 +64,8 @@
 <h1 data-aos="zoom-out-up">Lessons in this Class</h1>
 <div class="videos px-4 py-4 shadow" data-aos="flip-up">
     <div class="collapse" id="collapseExample">
+        
+        <a href="../Video Player Page/index.html">
     <table class="table table-hover table-borderless table-sm">
         <tr>
             <th>S.No</th>
@@ -101,6 +103,7 @@
             <td>05:00</td>
         </tr>
     </table>
+</a>
 </div>
     <i class="fas fa-chevron-down " data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample"></i>
 </div>
