--- a/login signup page/signup.html
+++ b/login signup page/signup.html
@@ -54,7 +54,7 @@
        <i class="fas fa-eye-slash input-group-text pas2"></i>
        </div>
        <div class="buttons">
-           <a class="btn rounded-pill my-2 p-2 w-25" style="background-color: #da2c38; color: #efefef; font-size: 1.1rem; font-weight: 500;" href="../index.html">SignUp <i class="fas fa-chevron-right"></i></a>
+           <a class="btn rounded-pill my-2 p-2 w-25" style="background-color: #da2c38; color: #efefef; font-size: 1.1rem; font-weight: 500;" href="../account info page/account.html">SignUp <i class="fas fa-chevron-right"></i></a>
            <span class="px-4">Or</span>
            <div class="site">
                <img src="Icon awesome-facebook.png" alt="" width="100%" class="mx-1">
