new skilly site

--- a/Video Player Page/index.html
+++ b/Video Player Page/index.html
@@ -279,6 +279,7 @@ a{
 }
 
 </style>
+<link rel="shortcut icon" href="../skilly-logo.png" type="image/x-icon">
 <link rel="stylesheet" href="media.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
