--- a/get started page/Get Started.html
+++ b/get started page/Get Started.html
@@ -311,11 +311,9 @@
             <img src="Group 6.png" alt="" width="100%">
         </div>
     </div>
-    <form action="../login signup page/signup.html">
         <div class="btun">
-            <a data-aos="zoom-in" class="Sign">Sign Up</a>
+            <a data-aos="zoom-in" href="../login signup page/signup.html" class="Sign">Sign Up</a>
         </div>
-    </form>
     <div class="footer">
         <div class="foot-list">
             <a href="../About us/aboutus.html">About</a>
