--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@
   <div data-aos="fade-left" class="cards">
     <img class="pre-btn" src="home page/caret-right.svg" alt="">
     <img class="nxt-btn" src="home page/caret-right.svg" alt="">
+    <a href="course description page/cd.html"></a>
       <div class="videos">
         <div class="card-cont">
             <div class="image">
